--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,14 +1,14 @@
 <div class="page-header">
-  <h3>Company #<%= @company.id %></h3>
+  <h1>
+  <dd><%= Company.find_by(:id =>@company.id).name %><dd/>
+  </h1>
 </div>
 
-<div class="row">
-  <div class="col-md-12 mb-2">
-    <dl class="dl-horizontal">
-      <dt>Name</dt>
-      <dd><%= @company.name %></dd>
+<h1>
+  <a href="/contacts/new" class="btn btn-lg btn-success">New Contact</a>
+</h1>
+</div>
 
-    </dl>
 
     <div class="btn-group btn-group-justified">
       <a href="/companies" class="btn btn-primary">
@@ -20,6 +20,8 @@
       <a href="/delete_company/<%= @company.id %>" class="btn btn-danger" rel="nofollow">
         Delete
       </a>
+
     </div>
+
   </div>
 </div>
