--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -10,10 +10,11 @@
     <table class="table table-striped table-hover">
       <tr>
         <th>Name</th>
-        <th>User</th>
         <th>Company</th>
         <th>Actions</th>
-      </tr>
+        <th>Number of Contacts</dt>
+
+        </tr>
 
       <% @contacts.each do |contact| %>
       <tr>
