--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -5,9 +5,13 @@
 </div>
 
 <h1>
-  <a href="/contacts/new" class="btn btn-lg btn-success">New Contact</a>
+  <a href="/contacts/new/<%= @company_id %>" class="btn btn-lg btn-success">New Contact</a>
 </h1>
 </div>
+
+<div class="row">
+  <div class="col-md-12 mb-2">
+    <dl class="dl-horizontal">
 
 
     <div class="btn-group btn-group-justified">
@@ -21,7 +25,6 @@
         Delete
       </a>
 
-    </div>
 
   </div>
 </div>
