--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -31,14 +31,19 @@
       <!-- Hidden with the current user's ID-->
       <input type="hidden" id="user_id" name="user_id" value="<%= current_user.id %>">
 
-      <!-- Label and input for company_id -->
-      <div class="form-group">
-        <label for="company_id" class="control-label">
-          Company
-        </label>
+      <!-- Company ID hidden field or input, as applicable -->
+      <% if @contact.company_id != nil %>
+        <input type="hidden" id="company_id" name="company_id" value="<%= @contact.company_id %>">
+      <% else %>
+        <!-- Label and input for company_id -->
+        <div class="form-group">
+          <label for="company_id" class="control-label">
+            Company
+          </label>
+          <input type="text" id="company_id" name="company_id" placeholder="Company" class="form-control">
+        </div>
+      <% end %>
 
-        <input type="text" id="company_id" name="company_id" placeholder="Company" class="form-control" value="<%= @contact.company_id %>">
-      </div>
 
       <button class="btn btn-success">
         Create Contact
