--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,23 +1,21 @@
 <div class="page-header">
-  <h3>Contact #<%= @contact.id %></h3>
+  <h3><%= @contact.name %></h3>
 </div>
 
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
-      <dt>Name</dt>
-      <dd><%= @contact.name %></dd>
-
-      <dt>User</dt>
-      <dd><%= @contact.user_id %></dd>
 
       <dt>Company</dt>
       <dd><%= @contact.company_id %></dd>
 
+      <dt>Position</dt>
+      <dd><%= @contact.name %></dd>
+
     </dl>
 
     <div class="btn-group btn-group-justified">
-      <a href="/contacts" class="btn btn-primary">
+      <a href="/companies" class="btn btn-primary">
         Back
       </a>
       <a href="/contacts/<%= @contact.id %>/edit" class="btn btn-warning">
