--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/companies">Companies</a></li>
-        
+          <li><a href="/contacts">Contacts</a></li>
+
 
         </ul>
 
