--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,7 +1,6 @@
 <div class="page-header">
   <h1>
     Companies
-    <a href="/companies/new" class="btn btn-lg btn-success">New Company</a>
   </h1>
 </div>
 
@@ -10,12 +9,14 @@
     <table class="table table-striped table-hover">
       <tr>
         <th>Name</th>
+        <th># of Contacts</th>
         <th>Action</th>
       </tr>
 
       <% @companies.each do |company| %>
       <tr>
         <td><%= company.name %></td>
+        <td><%= Contact.where(:user_id => current_user.id, :company_id => company.id).count  %></td>
         <td>
           <a href="/companies/<%= company.id %>" class="btn btn-primary">Contacts</a>
           <a href="/company_researches" class="btn btn-warning">Company Research</a>
@@ -26,3 +27,5 @@
     </table>
   </div>
 </div>
+
+<a href="/companies/new" class="btn btn-lg btn-default">New Company</a>
