--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -4,27 +4,71 @@
   </h1>
 </div>
 
-<h1>
-  <a href="/contacts/new/<%= @company_id %>" class="btn btn-lg btn-success">New Contact</a>
-</h1>
+
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-striped table-hover">
+      <tr>
+        <th>Name</th>
+        <th>Relationship</th>
+        <th>Last Action</th>
+        <th>Date</th>
+      </tr>
+
+
+    <% @company.contacts.each do |contact| %>
+  <tr>
+    <td><a href="/contacts/<%= contact.id %>"><%= contact.name %></a><td>
+      <select class="form-control-sm">
+        <option></option>
+        <option>Booth</option>
+        <option>LinkedIn 1st</option>
+        <option>LinkedIn 2nd</option>
+        <option>Colleague</option>
+        <option>Connected</option>
+      <select/>
+ <td>
+  <select class="form-control-sm">
+    <option></option>
+    <option>Initial Outreach</option>
+    <option>Thank You</option>
+    <option>Follow Up</option>
+
+    <select/>
+ <td>
+    <div class='input-group date' id='datetimepicker1'>
+  <input type='text' class="form-control" name="held_on" id="held_on">
+  <span class="input-group-addon">
+    <span class="glyphicon glyphicon-calendar"></span>
+  </span>
 </div>
+
+    </ul>
+  </div>
+    </div>
+      </tr>
+      <% end %>
+    </table>
+</table>
+
+
+
 
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
 
 
-    <div class="btn-group btn-group-justified">
-      <a href="/companies" class="btn btn-primary">
-        Back
-      </a>
-      <a href="/companies/<%= @company.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_company/<%= @company.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
-
-
   </div>
+</div>
+
+<script type="text/javascript">
+  $(function () {
+    $('#datetimepicker1').datetimepicker();
+  });
+</script>
+
+<h1>
+  <a href="/contacts/new/<%= @company_id %>" class="btn btn-lg btn-default">New Contact</a>
+</h1>
 </div>
