--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,3 @@
-
-
 <!-- Validation failure messages -->
 <% if @contact.errors.any? %>
   <% @contact.errors.full_messages.each do |message| %>
@@ -26,22 +24,36 @@
           Name
         </label>
 
-        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @contact.name %>">
-      </div>
+    <input type="text" id="name" name="name" placeholder="Name"     class="form-control" value="<%= @contact.name %>">
+    </div>
 
-      <!-- Label and input for user_id -->
 
-        <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @contact.user_id %>">
-      </div>
+      <!-- Hidden with the current user's ID-->
+      <input type="hidden" id="user_id" name="user_id" value="<%= current_user.id %>">
 
-      <!-- Label and input for company_id -->
       <div class="form-group">
         <label for="company_id" class="control-label">
           Company
         </label>
-
-        <input type="text" id="company_id" name="company_id" placeholder="Company" class="form-control" value="<%= @contact.company_id %>">
+        <select id="company_id" name="company_id" class="form-control">
+          <% @companies.each do |company| %>
+            <option value="<%= company.id %>"><%= company.name %></option>
+          <% end %>
+        </select>
       </div>
+
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Relationship
+        </label>
+      <select class="form-control">
+        <option></option>
+        <option>Booth</option>
+        <option>LinkedIn 1st</option>
+        <option>LinkedIn 2nd</option>
+        <option>Colleague</option>
+        <option>Connected</option>
+      <select/>
 
       <button class="btn btn-success">
         Create Contact
