--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -30,10 +30,10 @@
 </div>
 
     <div class="btn-group btn-group-justified">
-      <a href="/contacts" class="btn btn-primary">
+      <a href="/companies/<%= @contact.company_id %>" class="btn btn-primary" >
         Back
       </a>
-      
+
       <a href="/contacts/<%= @contact.id %>/edit" class="btn btn-warning">
         Edit
       </a>
