--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -43,17 +43,18 @@
       </div>
 
       <div class="form-group">
-        <label for="name" class="control-label">
+        <label for="relationship" class="control-label">
           Relationship
         </label>
-      <select class="form-control">
+      <select name="relationship" class="form-control">
         <option></option>
         <option>Booth</option>
         <option>LinkedIn 1st</option>
         <option>LinkedIn 2nd</option>
         <option>Colleague</option>
         <option>Connected</option>
-      <select/>
+      <select>
+    </div>
 
       <button class="btn btn-success">
         Create Contact
